Enhance worker configuration and fetch handler for Netlify integration
- Added environment variables for Netlify client ID, secret, and redirect URI in `wrangler.jsonc`.
- Implemented a new route in the fetch handler to manage Netlify OAuth authentication.
- Improved error handling for missing API URL and path in the fetch logic.
- Updated the proxy request logic to correctly reference the API path.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -27,7 +27,12 @@
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
-	"vars": { "WRANGLER_ENV": "" }
+	"vars": {
+		"WRANGLER_ENV": "",
+		"NETLIFY_CLIENT_ID": "",
+		"NETLIFY_CLIENT_SECRET": "",
+		"NETLIFY_REDIRECT_URI": ""
+	}
 	/**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
