--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -28,10 +28,10 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
 	"vars": {
-		"WRANGLER_ENV": "",
-		"NETLIFY_CLIENT_ID": "",
-		"NETLIFY_CLIENT_SECRET": "",
-		"NETLIFY_REDIRECT_URI": ""
+		"WRANGLER_ENV": ""
+		// "NETLIFY_CLIENT_ID": "",
+		// "NETLIFY_CLIENT_SECRET": "",
+		// "NETLIFY_REDIRECT_URI": ""
 	}
 	/**
 	 * Note: Use secrets to store sensitive data.
