Implement Netlify deployment handler and update worker configuration
- Added a new function `handleDeployCodeFlowCanvasToNetlify` to manage deployments to Netlify, including site creation and zip file uploads.
- Updated `worker-configuration.d.ts` to include Netlify environment variables as strings.
- Configured asset binding in `wrangler.jsonc` for the deployment zip file.
- Enhanced the fetch handler in `src/index.ts` to route requests for the new deployment functionality.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -32,7 +32,7 @@
 		// "NETLIFY_CLIENT_ID": "",
 		// "NETLIFY_CLIENT_SECRET": "",
 		// "NETLIFY_REDIRECT_URI": ""
-	}
+	},
 	/**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
@@ -43,6 +43,11 @@
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
 	// "assets": { "directory": "./public/", "binding": "ASSETS" },
+
+	"assets": {
+		"directory": "./assets/",
+		"binding": "ASSETS"
+	}
 
 	/**
 	 * Service Bindings (communicate between multiple Workers)
