Implement email form data handling and integrate with Mailrelay API
- Added a new endpoint to handle email form submissions, allowing users to send form data via email.
- Implemented validation for required fields and email format, enhancing error handling and user feedback.
- Integrated with Mailrelay API to send emails, providing a seamless experience for form submissions.
- Included CORS support for the new endpoint to facilitate cross-origin requests.
- Added comprehensive tests to ensure functionality and reliability of the email handling process.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -31,7 +31,9 @@
 		"WRANGLER_ENV": ""
 		// "NETLIFY_CLIENT_ID": "",
 		// "NETLIFY_CLIENT_SECRET": "",
-		// "NETLIFY_REDIRECT_URI": ""
+		// "NETLIFY_REDIRECT_URI": "",
+		// "MAILRELAY_API_KEY": "",
+		// "MAILRELAY_DOMAIN": ""
 	},
 	/**
 	 * Note: Use secrets to store sensitive data.
