Implement database functionality for form data management
- Added a new SQLite database integration to store, retrieve, update, and delete form data.
- Created a comprehensive API with endpoints for managing form submissions, including validation and error handling.
- Updated the README to include database setup instructions and API usage examples.
- Introduced a setup script for initializing the database schema.
- Added tests to ensure the reliability of database operations.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "form-generator-worker",
 	"version": "0.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"test": "vitest",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"setup-db": "node scripts/setup-database.js"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
