--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -22,6 +22,13 @@
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_name": "form-data-db",
+			"database_id": "your-database-id-here"
+		}
+	],
 
 	/**
 	 * Environment Variables
